<resources>
    <string name="app_name">Weight-Control</string>
    <string name="profile_tittle">Profile</string>
    <string name="profile_name">Name:</string>
    <string name="profile_weight">Weight:</string>
    <string name="profile_height">Height:</string>
    <string name="profile_goal">Goal:</string>
    <string name="enter_your_name">Name</string>
    <string name="enter_your_current_weight">Current weight in kg</string>
    <string name="enter_your_height">Height in cm</string>
    <string name="enter_your_desired_weight">Desired weight in kg</string>
    <string name="btn_save_profile">Save</string>
    <string name="validateWeight">The weight value must be between 20 and 1000kg</string>
    <string name="validateGoal">The weight goal value must be between 20 and 1000kg</string>
    <string name="validateHeight">The height value must be between 20 and 300cm</string>
    <string name="completeFields">Please complete all fields</string>
    <string name="profileUpdated">Profile successfully updated!</string>
    <string name="profile_icon_label">Profile</string>
    <string name="current_bmi">Current Weight</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="to_go">To Go</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="enter_weight_in_kg">Enter weight in kg</string>
    <string name="save">Save</string>
    <string name="weight_history_list">Weight History</string>
    <string name="date_list">Date</string>
    <string name="weight_list">Weight</string>
    <string name="bmi_list">BMI</string>
    <string name="current_weight_history">Current Weight</string>
    <string name="weight_goal_history">Weight Goal</string>
    <string name="to_go_history">To Go</string>
    <string name="current_bmi_history">Current BMI</string>
</resources>